--- a/src-astro/src/components/layout/Navigation.astro
+++ b/src-astro/src/components/layout/Navigation.astro
@@ -10,6 +10,7 @@ const navLinks = [
   { href: '/speakers', label: 'Speakers', show: isProgrammePublished },
   { href: '/sponsors', label: 'Sponsors', always: true },
   { href: '/team', label: 'Equipe', always: true },
+  { href: '/photos', label: 'Photos', always: true },
 ].filter(link => link.always || link.show);
 
 const currentPath = Astro.url.pathname;
